docs: generalize deployment documentation and remove server-specific details
- Update DEPLOYMENT.md to use generic paths and server IPs instead of hardcoded values
- Add deployment documentation files to .gitignore (keep templates only)
- Remove references to other applications (OptiTrade, Ezhome) from deployment docs
- Generalize nginx log paths and service references
- Add .env.local to .gitignore for local environment overrides
- Clean up whitespace and formatting in core.py
- Add field placeholder

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ env/
 
 # Environment variables
 .env
+.env.local
+
+# Deployment-specific files (keep templates only)
+deployment/README.md
+deployment/QUICK-START.md
+deployment/DEPLOYMENT-CHECKLIST.md
+deployment/ACCESS-GUIDE.md
+deployment/SUMMARY.md
