--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,7 @@
 
 # CORS allowed origins (comma-separated)
 # For production, add your server IP
-CORS_ORIGINS=http://localhost:3000,http://localhost:5173,http://192.168.0.174,http://127.0.0.1
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1
 
 # API Settings
 API_V1_PREFIX=/api/v1
