--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,7 +24,11 @@ build-backend = "hatchling.build"
 packages = ["app"]
 
 [tool.uv]
-dev-dependencies = []
+dev-dependencies = [
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.24.0",
+    "httpx>=0.27.0",
+]
 
 [tool.ruff]
 line-length = 88
