--- a/deployment/nginx-anki-location.conf
+++ b/deployment/nginx-anki-location.conf
@@ -1,19 +1,30 @@
 # Anki Deck Generator - Location block to add to main nginx config
-# Add this location block to /etc/nginx/sites-available/optitrade
+# Add this location block to your nginx site configuration
+# Replace /home/YOUR_USERNAME/Projects/anki with your actual path
 
     # Anki Deck Generator app - Proxy to backend on port 8002
     location /anki {
         # Serve frontend static files
-        alias /home/dima/Projects/anki/frontend/dist;
-        try_files $uri $uri/ /anki/index.html;
+        alias /home/YOUR_USERNAME/Projects/anki/frontend/dist;
         index index.html;
 
-        # Cache static assets
-        location ~* /anki/.*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            alias /home/dima/Projects/anki/frontend/dist;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
+        # SPA fallback: try file, then directory, then fallback to index.html
+        # Note: With alias, we need to use the aliased path for the fallback
+        try_files $uri $uri/ /anki/index.html;
+    }
+
+    # Fallback for SPA deep links - serves index.html for all /anki/* routes
+    location ~ ^/anki/(?!api|static).*$ {
+        alias /home/YOUR_USERNAME/Projects/anki/frontend/dist;
+        try_files $uri /index.html;
+    }
+
+    # Cache static assets for Anki frontend
+    location ~* ^/anki/assets/.*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        alias /home/YOUR_USERNAME/Projects/anki/frontend/dist;
+        rewrite ^/anki/(.*)$ /$1 break;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 
     # Anki API endpoints - Proxy to FastAPI backend
